@@ -12,13 +12,11 @@ import com.yahoo.elide.jsonapi.serialization.DataSerializer;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
 
+import io.reactivex.Observable;
 import lombok.ToString;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Container for different representations of top-level data in JSON API.
@@ -29,7 +27,7 @@ import java.util.stream.Collectors;
 @JsonDeserialize(using = DataDeserializer.class)
 @ToString
 public class Data<T> {
-    private final Collection<T> values;
+    private final Observable<T> values;
     private final RelationshipType relationshipType;
 
     /**
@@ -47,8 +45,18 @@ public class Data<T> {
      *
      * @param values List of resources
      */
-    public Data(Collection<T> values) {
+    public Data(Observable<T> values) {
         this.values = values;
+        this.relationshipType = RelationshipType.MANY_TO_MANY; // Any "toMany"
+    }
+
+    /**
+     * Constructor.
+     *
+     * @param values List of resources
+     */
+    public Data(Collection<T> values) {
+        this.values = Observable.fromIterable(values);
         this.relationshipType = RelationshipType.MANY_TO_MANY; // Any "toMany"
     }
 
@@ -58,18 +66,11 @@ public class Data<T> {
      * @param sortFunction comparator to sort data with
      */
     public void sort(Comparator<T> sortFunction) {
-        if (values instanceof List) {
-            ((List<T>) values).sort(sortFunction);
-        } else {
-            ArrayList<T> sortedList = new ArrayList<>(values);
-            sortedList.sort(sortFunction);
-            values.clear();
-            values.addAll(sortedList);
-        }
+        this.values.sorted(sortFunction);
     }
 
     public Collection<T> get() {
-        return values;
+        return values.toList().blockingGet();
     }
 
     /**
@@ -97,8 +98,8 @@ public class Data<T> {
 
     @SuppressWarnings("unchecked")
     public Collection<ResourceIdentifier> toResourceIdentifiers() {
-        return ((Collection<Resource>) get()).stream()
-                                             .map(object -> object != null ? object.toResourceIdentifier() : null)
-                                             .collect(Collectors.toList());
+        return values
+                .map(object -> object != null ? ((Resource) object).toResourceIdentifier() : null)
+                .toList().blockingGet();
     }
 }
